fix: make search vertical position of align with the title

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -60,7 +60,7 @@ body.light {
 }
 
 .ais-Highlight-highlighted{
-  @apply text-indigo-400 bg-indigo-500
+  @apply text-indigo-500 bg-transparent
 }
 .ais-SearchBox-loadingIndicator{
   @apply hidden
